<resources>
    <string name="app_name">Cek Resi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="awb_number">No Resi</string>
    <string name="track_package">Lacak Paket</string>
    <string name="select_courier">Pilih Ekspedisi</string>
    <string name="awb_number_empty">Harap Masukkan Nomor Resi Anda</string>
    <string name="sender">Pengirim</string>
    <string name="address">Alamat</string>
    <string name="receiver">Penerima</string>
    <string name="save">Simpan</string>
    <string name="result_not_found">Hasil Tidak Ditemukan</string>
    <string name="input_awb_number">Masukkan Nomor Resi</string>
    <string name="track_your_package">Lacak Paket Kamu</string>
    <string name="history">Riwayat</string>
    <string name="other">Lainnya</string>
    <string name="cost_check">Cek Ongkir</string>
    <string name="about_app">Tentang Aplikasi</string>
    <string name="tracking">Tracking</string>
    <string name="on_load_data">Sedang Memuat Data...</string>
    <string name="back">Kembali</string>
    <string name="finish">Selesai</string>
    <string name="clear_all">Hapus Semua</string>
    <string name="see_all">Lihat Semua</string>
    <string name="saved">Disimpan</string>
</resources>