<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.CheckAwbFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:hint="@string/select_courier">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputCourier"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:editable="false"
                            android:focusable="false" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/awb_number">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputAWB"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonTracking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/track_package" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardView"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textSizeList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:drawableStart="@drawable/ic_list_24"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/colorBlack"
                        android:gravity="center"
                        android:text="@string/history"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:visibility="gone"
                        android:id="@+id/layoutSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/inputSearch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/input_awb_number" />

                        <ImageView
                            android:foreground="?attr/selectableItemBackground"
                            android:layout_marginStart="8dp"
                            android:id="@+id/imageClose"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:gravity="center"
                            android:src="@drawable/ic_close_24" />

                    </LinearLayout>

                    <TextView
                        android:foreground="?attr/selectableItemBackground"
                        android:id="@+id/textSeeAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:gravity="center"
                        android:text="@string/see_all"/>

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cardView"/>

            </LinearLayout>


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


<!--    <TextView-->
<!--        android:id="@+id/textBuildWithLove"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:gravity="center"-->
<!--        android:padding="16dp"-->
<!--        android:text="@string/build_with_love_from_steady_tech"-->
<!--        android:textColor="@color/colorPrimaryDark"-->
<!--        app:layout_constraintBottom_toBottomOf="parent" />-->

</RelativeLayout>